# pyfetcher

./: .readthedocs.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml
.trunk/: trunk.yaml
docs/: cli.rst  conf.py  headers.rst  index.rst  infrastructure.rst  mcp.rst  pipeline.rst  quickstart.rst  requirements.txt  scraping.rst  tui.rst
docs/api/: config.rst  contracts.rst  crawler.rst  download.rst  downloaders.rst  events.rst  extractors_api.rst  fetch.rst  headers.rst  index.rst  mcp.rst  metadata.rst  pipeline_api.rst  ratelimit.rst  scrape.rst  store.rst  transports.rst
docs/notes/: mcp-research.md
examples/: advanced_backends.py  async_batch.py  basic_fetch.py  browser_headers.py  content_extraction.py  crawler_spider.py  download_file.py  metadata_extraction.py  pipeline_demo.py  rate_limiting.py  scraping.py
infra/: .env.example  docker-compose.yml
infra/alembic/: alembic.ini  env.py
infra/init-scripts/: 01-create-extensions.sql
src/pyfetcher/: __init__.py  config.py  rich.py
src/pyfetcher/cli/: __init__.py  app.py
src/pyfetcher/contracts/: __init__.py  policy.py  request.py  resource.py  response.py  url.py
src/pyfetcher/crawler/: __init__.py  dedup.py  discovery.py  feeds.py  frontier.py  politeness.py  spider.py
src/pyfetcher/db/: __init__.py  engine.py  repo.py
src/pyfetcher/db/models/: __init__.py  base.py  feed.py  host.py  job.py  media.py  page.py  url.py
src/pyfetcher/download/: __init__.py  service.py
src/pyfetcher/downloaders/: __init__.py  base.py  direct.py  gallerydl.py  ytdlp.py
src/pyfetcher/events/: __init__.py  channels.py  listener.py  publisher.py
src/pyfetcher/extractors/: __init__.py  article.py  content.py  convert.py  media_meta.py
src/pyfetcher/fetch/: __init__.py  batch.py  functions.py  service.py  stream.py
src/pyfetcher/headers/: __init__.py  base.py  browser.py  profiles.py  rotating.py  static.py  ua.py
src/pyfetcher/mcp/: __init__.py  __main__.py  models.py  server.py
src/pyfetcher/metadata/: __init__.py  extruct.py  html.py  models.py  opengraph.py
src/pyfetcher/pipeline/: __init__.py  crawl_stage.py  download_stage.py  runner.py  scrape_stage.py  stage.py
src/pyfetcher/ratelimit/: __init__.py  limiter.py
src/pyfetcher/retry/: __init__.py  tenacity.py
src/pyfetcher/scrape/: __init__.py  content.py  forms.py  links.py  robots.py  selectors.py  sitemap.py
src/pyfetcher/store/: __init__.py  client.py  keys.py
src/pyfetcher/transports/: __init__.py  aiohttp.py  base.py  cloudscraper.py  curl_cffi.py  httpx.py
src/pyfetcher/tui/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_config.py  test_contracts.py  test_crawler.py  test_db_models.py  test_download.py  test_downloaders_unit.py  test_events_channels.py  test_extractors.py  test_fetch_service.py  test_fetch_stream.py  test_headers.py  test_mcp_e2e.py  test_mcp_models.py  test_mcp_server.py  test_metadata.py  test_pipeline_unit.py  test_ratelimit.py  test_retry.py  test_scrape.py  test_store_keys.py  test_transports.py
