[project]
name = "pyfetcher"
version = "0.1.0"
description = "Advanced web fetching and scraping toolkit with realistic browser header generation"
authors = [{ name = "Will", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.0",
  "httpx[http2]>=0.27",
  "aiohttp>=3.9",
  "tenacity>=8.0",
  "beautifulsoup4>=4.12",
  "click>=8.0",
  "rich>=13.0",
  "defusedxml>=0.7",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]
metadata = ["extruct>=0.17", "w3lib>=2.0"]
docs = ["sphinx>=7.0", "furo>=2024.0", "sphinx-autodoc-typehints>=2.0"]
all = ["pyfetcher[tui,metadata]"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "aioresponses>=0.7",
]

[project.scripts]
pyfetcher = "pyfetcher.cli.app:main"
pyfetcher-tui = "pyfetcher.tui.app:run_tui"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/pyfetcher"]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.isort]
profile = "black"
known_first_party = ["pyfetcher"]

[tool.black]
target-version = ["py313"]
line-length = 100
