[project]
name = "fetchkit"
version = "0.3.1"
description = "Advanced web fetching, scraping, and content acquisition toolkit with crawl-scrape-download pipeline"
authors = [{ name = "Will", email = "you@example.com" }]
dependencies = [
  "pydantic>=2.0",
  "httpx[http2]>=0.27",
  "aiohttp>=3.9",
  "tenacity>=8.0",
  "beautifulsoup4>=4.12",
  "click>=8.0",
  "rich>=13.0",
  "defusedxml>=0.7",
  "pydantic-settings>=2.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]
metadata = ["extruct>=0.17", "w3lib>=2.0"]
curl = ["curl_cffi>=0.7"]
cloudscraper = ["cloudscraper>=1.2"]
db = [
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.31",
  "alembic>=1.14",
  "pydantic-settings>=2.0",
]
store = ["aioboto3>=13.0", "minio>=7.2"]
pipeline = ["fetchkit[db,store]"]
downloaders = ["yt-dlp>=2024.0", "gallery-dl>=1.27"]
extractors = [
  "trafilatura>=2.0",
  "readability-lxml>=0.8",
  "html2text>=2025.0",
  "markdownify>=1.0",
  "newspaper3k>=0.2",
]
media = [
  "mutagen>=1.47",
  "pymediainfo>=7.0",
  "exifread>=3.5",
  "pypdf>=6.0",
  "Pillow>=12.0",
  "ffmpeg-python>=0.2",
]
browser = ["playwright>=1.50", "playwright-stealth>=2.0"]
observe = [
  "structlog>=25.0",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
]
feeds = ["feedparser>=6.0", "dateparser>=1.2"]
text = ["ftfy>=6.0", "anyascii>=0.3", "tldextract>=5.0", "python-slugify>=8.0"]
mcp = ["fastmcp>=2.0"]
langchain = ["langchain-mcp-adapters>=0.1", "langchain-core>=0.3"]
docs = [
  "sphinx>=7.0",
  "furo>=2024.0",
  "sphinx-autodoc-typehints>=2.0",
  "sphinxcontrib-mermaid>=1.0",
]
full = [
  "fetchkit[tui,metadata,curl,cloudscraper,pipeline,downloaders,extractors,media,browser,observe,feeds,text,mcp]",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "aioresponses>=0.7",
  "pydantic-settings>=2.0",
  "ruff>=0.15",
]

[project.scripts]
pyfetcher = "pyfetcher.cli.app:main"
pyfetcher-tui = "pyfetcher.tui.app:run_tui"
pyfetcher-mcp = "pyfetcher.mcp.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/pyfetcher"]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
per-file-ignores = { "tests/**" = ["E402", "N806", "N817", "E501", "SIM222"] }

[tool.isort]
profile = "black"
known_first_party = ["pyfetcher"]

[tool.black]
target-version = ["py313"]
line-length = 100
